add api docs for backups, unbanrequests and usersettings controllers [#261]
